# fal-demos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
fal_demos/: __init__.py
fal_demos/audio/: README.md  diffrhythm.py
fal_demos/distributed/: __init__.py
fal_demos/distributed/inference/: __init__.py
fal_demos/distributed/inference/parallel_sdxl/: __init__.py  app.py
fal_demos/distributed/inference/xfuser/: __init__.py  app.py  engine.py  launch.py
fal_demos/distributed/training/: __init__.py
fal_demos/distributed/training/flux_lora/: __init__.py
fal_demos/distributed/training/flux_lora/preprocessor/: __init__.py  app.py  preprocessor_worker.py
fal_demos/distributed/training/flux_lora/trainer/: __init__.py  app.py  training_worker.py
fal_demos/image/: README.md  hunyuan3d.py  sana.py
fal_demos/tts/: README.md  kokoro.py
fal_demos/video/: README.md  wan_trainer.py
fal_demos/video/matrix_webrtc/: README.md  matrix.py  matrix_client.py
fal_demos/video/matrix_webrtc/frontend/: index.html  package-lock.json  package.json
fal_demos/video/matrix_webrtc/frontend/src/: main.js  style.css
fal_demos/video/webcam_webrtc/: webcam.py
fal_demos/video/webcam_webrtc/frontend/: package-lock.json
fal_demos/video/yolo_webcam_webrtc/: README.md  yolo.py  yolo_client.py
fal_demos/video/yolo_webcam_webrtc/frontend/: index.html  package-lock.json  package.json  vite.config.js
fal_demos/video/yolo_webcam_webrtc/frontend/src/: main.js  style.css
